UM-2833 upgrade yfinance to fix stock split issue

--- a/stonks-app/requirements.txt
+++ b/stonks-app/requirements.txt
@@ -5,4 +5,5 @@ pandas==1.4.1
 plotly-express==0.4.1
 streamlit-cookies-manager==0.2.0
 streamlit==1.12.2
-yfinance==0.1.70
+yfinance==0.2.38
+altair<5
