--- a/stonks-app/requirements.txt
+++ b/stonks-app/requirements.txt
@@ -1,6 +1,7 @@
 english-words==1.1.0
 firebase-admin==5.3.0
 matplotlib==3.5.1
+numpy==1.26.4
 pandas==1.4.1
 plotly-express==0.4.1
 streamlit-cookies-manager==0.2.0
